[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydoh"
version = "0.1.0"
description = "zero-dependency DNS over HTTPS resolver for Python, with an optional socket.getaddrinfo patch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Savsis" }]
keywords = ["dns", "doh", "dns-over-https", "privacy", "networking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Name Service (DNS)",
]

[project.urls]
Homepage = "https://github.com/ImSavsis/pydoh"
Issues = "https://github.com/ImSavsis/pydoh/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydoh"]
